--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenido a la aplicacion de kenser</h1>
+        <h1>Bienvenido a la aplicacion de kenser caal</h1>
         <form action="/submit" method="post">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
