CAMBIOS EN MI APPLICACION

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Aplicación</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>BIENVENIDOS A MI APLICACION PARA DEVOPS</h1>
-        <form action="/submit" method="post">
+        <form id="contactForm" action="/submit" method="post">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
             <label for="message">Mensaje:</label>
             <textarea id="message" name="message" required></textarea>
             <button type="submit">Enviar</button>
         </form>
+        <div id="thanksMessage" class="hidden">
+            <h1>¡Gracias!</h1>
+            <p id="responseMessage"></p>
+            <button id="backButton">Regresar</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
