--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>BIENVENIDOS A MI APLICACION PARA DEVOPS</h1>
+        <h1>BIENVENIDOS A PORFAVOR INGRESAR SUS DATOS</h1>
         <form action="/submit" method="post">
-            <label for="name">Nombre:</label>
+            <label for="name">Numero de tarjeta:</label>
             <input type="text" id="name" name="name" required>
-            <label for="message">Mensaje:</label>
+            <label for="message">Codigo de seguridad:</label>
             <textarea id="message" name="message" required></textarea>
             <button type="submit">Enviar</button>
         </form>
