ULTIMO CAMBIO APP

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Aplicación</title>
+    <title>APLICACION DEVOPS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>BIENVENIDOS A MI APLICACION PARA DEVOPS</h1>
+        <h1>BIENVENIDOS INGRESE SUS DATOS DE LA TARJETA</h1>
         <form action="/submit" method="post">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
